--- a/cap21/tabela02.html
+++ b/cap21/tabela02.html
@@ -12,6 +12,14 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
+        }
+
+        caption{
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
         }
 
         td, th{
@@ -24,14 +32,30 @@
         }
 
         thead, tfoot{
-            background-color: gray;
+            background-color: #383838;
             color: rgb(255, 255, 255);
+        }
+
+        thead > tr > th{
+            position: sticky; /* "COLÁVEL/GRUDÁVEL" */
+            top: -1px;
+            background-color: #383838;
+        }
+
+        /* EFEITO ZEBRADO COM A PSEUDOCLASSE 'nth-child()'
+        -> '2n' = VAI PULANDO DE 2 EM 2
+        -> 'odd' = ÍMPAR EM INGLÊS
+        -> 'even' = PAR EM INGLÊS
+        */
+        tbody > tr:nth-child(2n){
+            background-color: lightgray;
         }
     </style>
 </head>
 <body>
     <!-- ANATOMIA PARA TABELAS GRANDES:
         TABLE
+            CAPTION = LEGENDA
             THEAD
                 TR, TD, TH
             TBODY
@@ -41,10 +65,13 @@
      -->
     <h1>Uso de tabelas grandes</h1>
     <table>
+        <caption>
+            População das Unidades Federativas
+        </caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -159,7 +186,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>212.583.720</strong></td>
             </tr>
         </tfoot>
